--- a/_posts/2023-04-12-test.md
+++ b/_posts/2023-04-12-test.md
@@ -4,6 +4,10 @@ title: "첫 포스팅 테스트"
 categories: test
 tag: [test_tag, 여러태그추가, 테스트중]
 toc: true
+author_profile: false
+sidebar:
+  nav: "docs"
+search: false # 블로그글 검색안되게해줌
 ---
 
 테스트
