공지사항, 유튜브 업로드, 버튼

--- a/_posts/2023-04-12-test.md
+++ b/_posts/2023-04-12-test.md
@@ -10,4 +10,20 @@ sidebar:
 search: false # 블로그글 검색안되게해줌
 ---
 
+**[공지사항]** 공지사항 테스트입니다.
+{: .notice--danger}
+
+<div class="notice--success">
+<h4>공지사항</h4>
+<ul>
+  <li>1</li>
+  <li>2</li>
+  <li>3</li>
+</ul>
+</div>
+
+[버튼](https://google.com){: .btn .btn--danger}
+
+{% include video id="" provider="youtube" %}
+
 테스트
