--- a/_posts/2023-04-12-test.md
+++ b/_posts/2023-04-12-test.md
@@ -5,8 +5,8 @@ categories: test
 tag: [test_tag, 여러태그추가, 테스트중]
 toc: true
 author_profile: false
-sidebar:
-  nav: "docs"
+# sidebar:
+#   nav: "docs"
 search: false # 블로그글 검색안되게해줌
 ---
 
@@ -21,9 +21,10 @@ search: false # 블로그글 검색안되게해줌
   <li>3</li>
 </ul>
 </div>
-
 [버튼](https://google.com){: .btn .btn--danger}
 
 {% include video id="" provider="youtube" %}
 
 테스트
+
+![Scan]({{site.url}}/_posts/2023-04-12-test.assets/Scan.jpg)
