이미지업로드 오류해결중_01

--- a/_posts/2023-04-12-test.md
+++ b/_posts/2023-04-12-test.md
@@ -27,4 +27,4 @@ search: false # 블로그글 검색안되게해줌
 
 테스트
 
-![Scan]({{site.url}}/_posts/2023-04-12-test.assets/Scan.jpg)
+![Scan](./2023-04-12-test.assets/Scan.jpg)
