--- a/_posts/2023-04-12-test.md
+++ b/_posts/2023-04-12-test.md
@@ -27,4 +27,6 @@ search: false # 블로그글 검색안되게해줌
 
 테스트
 
-![Scan](./2023-04-12-test.assets/Scan.jpg)
+![Scan](https://user-images.githubusercontent.com/96971417/231450953-c0d52b18-d70f-4d5d-b634-d8847150352f.jpg)
+
+![Scan](./2023-04-12-test.assets/Scan-1681301117514-3.jpg)
