연도별보기 추가

--- a/_posts/2023-04-12-test.md
+++ b/_posts/2023-04-12-test.md
@@ -8,10 +8,13 @@ author_profile: false
 # sidebar:
 #   nav: "docs"
 search: false # 블로그글 검색안되게해줌
+redirect_from:
+  - /test2
+use_math: true
 ---
 
 **[공지사항]** 공지사항 테스트입니다.
-{: .notice--danger}
+{: .notice--primary}
 
 <div class="notice--success">
 <h4>공지사항</h4>
@@ -29,4 +32,8 @@ search: false # 블로그글 검색안되게해줌
 
 ![Scan](https://user-images.githubusercontent.com/96971417/231450953-c0d52b18-d70f-4d5d-b634-d8847150352f.jpg)
 
-![Scan]({{site.url}}/images/Scan.jpg)
+![Scan]({{site.url}}/images/Scan.jpg){: .img-width-half .align-center}
+
+수식
+$[x^n + y^n = z^n]$
+$y = f(x)^2$
