초기설정마무리

--- a/_posts/2023-04-12-test.md
+++ b/_posts/2023-04-12-test.md
@@ -5,8 +5,8 @@ categories: test
 tag: [test_tag, 여러태그추가, 테스트중]
 toc: true
 author_profile: false
-# sidebar:
-#   nav: "docs"
+sidebar:
+  nav: "counts"
 search: false # 블로그글 검색안되게해줌
 redirect_from:
   - /test2
